--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,27 @@ img:hover {
     transform:scale(1.1);
     filter:contrast(70%)
 }
+
+.welcome {
+    font-size: 2rem;
+    display: inline-block;
+    white-space: nowrap;
+    overflow: hidden;
+    border-right: 2px solid rgb(53, 65, 132); /* optional typing cursor */
+    animation: Welcoming 3s steps(23) infinite alternate; /* 5 = number of words */
+}
+
+@keyframes Welcoming {
+    from {
+        width:0ch;
+    }
+    to {
+        width: 27ch;
+    }
+}
+
+@media (min-width: 600px) {
+   .welcome {
+     font-size: 1rem;
+    } 
+}
